--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,21 @@
 Package: rangeModelMetaData
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Provides templates for metadata files associated with species range models
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Cory Merow, Brian Maitner
+Maintainer: Cory Merow <cory.merow@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 5.0.1
+Depends:
+Suggests:
+    testthat,    
+    knitr,
+    rmarkdown,
+    cmsdm,
+    BIENWorkflow,
+    MOLSDM
+VignetteBuilder: knitr
