commented out unwritten funcs in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(rmmAutofillEnvironment)
 export(rmmAutofillModelObj)
 export(rmmAutofillPackageCitation)
 export(rmmAutofillPrediction)
-export(rmmCleanEmpties)
+#export(rmmCleanEmpties)
 export(rmmNameCheck)
 export(rmmPrintEmpty)
 export(rmmSuggest)
-export(rmmToCSV)
+#export(rmmToCSV)
