--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(rmmAutofillEnvironment)
 export(rmmAutofillModelObj)
 export(rmmAutofillPackageCitation)
 export(rmmAutofillPrediction)
-export(rmmCleanEmpties)
+export(rmmFindEmpties)
 export(rmmNameCheck)
 export(rmmPrintEmpty)
 export(rmmSuggest)
-export(rmmToCSV)
+export(toCSV)
