small fixes to make it build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(rmmAutofillEnvironment)
 export(rmmAutofillModelObj)
 export(rmmAutofillPackageCitation)
 export(rmmAutofillPrediction)
-export(rmmCleanEmpties)
+#export(rmmCleanEmpties)
 export(rmmNameCheck)
 export(rmmPrintEmpty)
 export(rmmToCSV)
