--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,4 +19,9 @@ Suggests:
     cmsdm,
     BIENWorkflow,
     MOLSDM
+Imports:    
+    raster,
+    dismo,
+    googlesheets,
+    utils
 VignetteBuilder: knitr
