--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: rangeModelMetadata
 Type: Package
-Title: Provides templates for metadata files associated with species range models
+Title: Provides templates for metadata files associated with species range
+    models
 Version: 0.1.0
 Author: Cory Merow, Brian Maitner, Hannah Owens
 Maintainer: Cory Merow <cory.merow@gmail.com>
@@ -9,20 +10,19 @@ Description: More about what it does (maybe more than one line)
 License: License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 5.0.1
 Depends:
     googlesheets
 Suggests:
-    testthat,    
+    testthat,
     knitr,
     rmarkdown,
     cmsdm,
     BIENWorkflow,
     MOLSDM
-Imports: 
+Imports:
     raster,
     dismo,
     ENMeval,
-    googlesheets,
     utils
 VignetteBuilder: knitr
