Fixed glitch keeping rmmValueCheck function from being built (seems to be related to dependencies on utils and stats not being imported properly)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,6 @@ export(rmmPrintEmpty)
 export(rmmPrintFull)
 export(rmmSuggest)
 export(rmmToCSV)
+export(rmmValueCheck)
+import(stats)
+import(utils)
