fixed a few minor bugs, modified check function names for consistency, added rmmCheckMissingValues and rmmFinalize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,13 @@ export(rmmAutofillEnvironment)
 export(rmmAutofillModelObj)
 export(rmmAutofillPackageCitation)
 export(rmmAutofillPrediction)
-export(rmmNameCheck)
+export(rmmCheckFinalize)
+export(rmmCheckMissingNames)
+export(rmmCheckName)
+export(rmmCheckValue)
 export(rmmPrintEmpty)
 export(rmmPrintFull)
 export(rmmSuggest)
 export(rmmToCSV)
-export(rmmValueCheck)
 import(stats)
 import(utils)
