fixed template NAs, built

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(rmmAutofillEnvironment)
 export(rmmAutofillModelObj)
 export(rmmAutofillPackageCitation)
 export(rmmAutofillPrediction)
+export(rmmCheckEmpty)
 export(rmmCheckFinalize)
 export(rmmCheckMissingNames)
 export(rmmCheckName)
