rmm rds works for shiny app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(rmmCheckEmpty)
 export(rmmCheckFinalize)
 export(rmmCheckMissingNames)
 export(rmmCheckName)
+export(rmmCheckShiny)
 export(rmmCheckValue)
 export(rmmPrintEmpty)
 export(rmmPrintFull)
