moved enmeval to suggests (was having an rjava error on my computer) namespaced shiny stuff

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,10 +19,11 @@ Suggests:
     rmarkdown,
     cmsdm,
     BIENWorkflow,
-    MOLSDM
+    MOLSDM,
+    ENMeval
 Imports:
     raster,
     dismo,
-    ENMeval,
-    utils
+    utils,
+    shiny
 VignetteBuilder: knitr
