changed name of rangeModelMetadataTemplate to rmmTemplate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(.rmmLeftJustify)
 export(cleanForCSV)
 export(csvToRMM)
-export(rangeModelMetadataTemplate)
 export(rmmAutofillENMeval)
 export(rmmAutofillEnvironment)
 export(rmmAutofillModelObj)
@@ -15,9 +14,12 @@ export(rmmCheckMissingNames)
 export(rmmCheckName)
 export(rmmCheckShiny)
 export(rmmCheckValue)
+export(rmmDataDictionary)
+export(rmmFamilies)
 export(rmmPrintEmpty)
 export(rmmPrintFull)
 export(rmmSuggest)
+export(rmmTemplate)
 export(rmmToCSV)
 import(stats)
 import(utils)
