--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,14 +10,13 @@ export(rmmAutofillPackageCitation)
 export(rmmAutofillPrediction)
 export(rmmCheckEmpty)
 export(rmmCheckFinalize)
+export(rmmCheckFull)
 export(rmmCheckMissingNames)
 export(rmmCheckName)
 export(rmmCheckShiny)
 export(rmmCheckValue)
 export(rmmDataDictionary)
 export(rmmFamilies)
-export(rmmPrintEmpty)
-export(rmmPrintFull)
 export(rmmSuggest)
 export(rmmTemplate)
 export(rmmToCSV)
