--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Depends:
-    googlesheets
+    googlesheets,
+    spocc
 Suggests:
     testthat,
     knitr,
