--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(.rmmLeftJustify)
 export(cleanForCSV)
 export(csvToRMM)
+export(rmmAutofillBIEN)
 export(rmmAutofillENMeval)
 export(rmmAutofillEnvironment)
 export(rmmAutofillModelObj)
 export(rmmAutofillPackageCitation)
 export(rmmAutofillPrediction)
+export(rmmAutofillspocc)
 export(rmmCheckEmpty)
 export(rmmCheckFinalize)
 export(rmmCheckFull)
