--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,17 +6,15 @@ export(csvToRMM)
 export(rmmAutofillBIEN)
 export(rmmAutofillENMeval)
 export(rmmAutofillEnvironment)
-export(rmmAutofillModelObj)
 export(rmmAutofillPackageCitation)
-export(rmmAutofillPrediction)
 export(rmmAutofillspocc)
 export(rmmCheckEmpty)
 export(rmmCheckFinalize)
-export(rmmCheckFull)
 export(rmmCheckMissingNames)
 export(rmmCheckName)
 export(rmmCheckShiny)
 export(rmmCheckValue)
+export(rmmCleanNULLs)
 export(rmmDataDictionary)
 export(rmmFamilies)
 export(rmmSuggest)
