--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,14 +12,15 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Depends:
-    googlesheets,
-    spocc
 Suggests:
     testthat,
     knitr,
     rmarkdown,
-    ENMeval
+    ENMeval,
+    BIEN
 Imports:
+    googlesheets,
+    spocc,
     raster,
     dismo,
     utils,
