--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,43 @@
 Package: rangeModelMetadata
 Type: Package
 Title: Provides Templates for Metadata Files Associated with Species Range Models
-Version: 0.1.3
-Author: Cory Merow, Brian Maitner, Hannah Owens, Jamie Kass, Brian Enquist, Rob Guralnick, Damairis Zurrel, Christian Koenig
+Version: 0.1.4
+Authors@R: c(person('Cory','Merow',email='cory.merow@gmail.com',role=c('aut','cre')),
+    person('Brian', 'Maitner',role=c('aut')),
+    person('Hannah', 'Owens',role=c('aut')),
+    person('Jamie', 'Kass',role=c('aut')),
+    person('Brian', 'Enquist',role=c('aut')),
+    person('Rob', 'Guralnik',role=c('aut')),
+    person('Damaris', 'Zurrell',role=c('aut')),
+    person('Christian', 'Koenig',role=c('aut')))
 Maintainer: Cory Merow <cory.merow@gmail.com>
-Description: Range Modeling Metadata Standards (RMMS) address three challenges: they (i) are designed for convenience to encourage use, (ii) accommodate a wide variety of applications, and (iii) are extensible to allow the community of range modelers to steer it as needed. RMMS are based on a data dictionary that specifies a hierarchical structure to catalog different aspects of the range modeling process. The dictionary balances a constrained, minimalist vocabulary to improve standardization with flexibility for users to provide their own values. Associated manuscript in review.
-License: MIT + file LICENSE
+Description: Range Modeling Metadata Standards (RMMS) address three challenges: 
+  they (i) are designed for convenience to encourage use, (ii) accommodate a wide 
+  variety of applications, and (iii) are extensible to allow the community of range 
+  modelers to steer it as needed. RMMS are based on a data dictionary that specifies 
+  a hierarchical structure to catalog different aspects of the range modeling process. 
+  The dictionary balances a constrained, minimalist vocabulary to improve 
+  standardization with flexibility for users to provide their own values. 
+  Merow et al. (2019) <DOI:10.1111/geb.12993> describe the standards in 
+  more detail. Note that users who prefer to use the R package 'ecospat' can obtain it from
+  <https://github.com/ecospat/ecospat>.
+License: GPL (>= 3)
 Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.0.2
-Depends:
+RoxygenNote: 7.1.2
+Depends: R (>= 3.5.0)
 Suggests:
-  knitr,
-  rmarkdown,
   BIEN,
-Imports:
   biomod2,
   dismo,
-  dplyr,
   ecospat,
-  ENMeval,
-  googlesheets,
+  googlesheets4,
+  knitr,
+  rmarkdown
+Imports:
+  dplyr,
   jsonlite,
   MASS,
+  methods,
   raster,
   rgbif,
   rgdal,
