--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,6 @@ export(rmmTemplate)
 export(rmmToCSV)
 import(stats)
 import(utils)
+importFrom(BIEN,BIEN_metadata_citation)
+importFrom(terra,ext)
+importFrom(terra,res)
